# cookiecutter-python-project

./: .cruft.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  cookiecutter.json  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  (+1 more)
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.in  setup.py
{{cookiecutter.project_slug}}/.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  question.md
{{cookiecutter.project_slug}}/.github/workflows/: build.yml  install.yml  tests.yml  update.yml
{{cookiecutter.project_slug}}/docs/: contributing.md  index.md  reference.md
{{cookiecutter.project_slug}}/docs/adr/: adr.md
{{cookiecutter.project_slug}}/docs/examples/: simple-example.py
{{cookiecutter.project_slug}}/docs/stylesheets/: links.css
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug.replace('-', '_')}}/: __init__.py  version.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_underscore_slug}}/: __init__.py  config.py  model.py  services.py  version.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_underscore_slug}}/entrypoints/: __init__.py  cli.py
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/e2e/: test_cli.py
{{cookiecutter.project_slug}}/tests/unit/: test_config.py  test_version.py
(+22 files in other folders)
